--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="Bruh lmfao" />
+    <meta property="og:description" content="bruh lmfao" />
+    <meta property="og:site_name" content="Troll" >
+    <meta property="og:image" content="https://i.imgur.com/bs3c1vD.png" />
     <title>bruh</title>
 </head>
 <body>
-    <video controls width="250" autoplay="true">
+    <video controls width="1280" autoplay="true">
     
         <source src="bruh.mp4"
                 type="video/mp4">
