--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:title" content="Bruh lmfao" />
-    <meta property="og:description" content="bruh lmfao" />
-    <meta property="og:site_name" content="Troll" >
+    <meta property="og:title" content="hurb" />
+    <meta property="og:description" content="hurb" />
+    <meta property="og:site_name" content="hurb" >
     <meta property="og:image" content="https://i.imgur.com/bs3c1vD.png" />
-    <title>bruh</title>
+    <title>hurb</title>
 </head>
 <body>
-    <video controls width="1280" autoplay="true">
+    <video autoplay="true" loop="true" plays-inline="" style="position: absolute; right: 0; top: 0; min-width:100%; z-index: -100; object-fit: cover;">
     
         <source src="bruh.mp4"
                 type="video/mp4">
