--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>hurb</title>
 </head>
 <body>
-    <video autoplay="true" loop="true" plays-inline="" style="position: absolute; right: 0; top: 0; min-width:100%; z-index: -100; object-fit: cover;">
+    <video autoplay="true" loop="true"">
     
         <source src="bruh.mp4"
                 type="video/mp4">
