--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <title>hurb</title>
 </head>
 <body>
-    <video autoplay="true" loop="true"">
+    <video autoplay="true" loop="true">
     
         <source src="bruh.mp4"
-                type="video/mp4">
+                type="video/mp4" width="99vh" height="99vh">
     
         Sorry, your browser doesn't support embedded videos.
     </video>
