--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>hurb</title>
 </head>
 <body>
-    <video autoplay loop="true">
+    <video autoplay loop="true" width="99vh" height="99vh">
     
         <source src="bruh.mp4"
                 type="video/mp4" width="99vh" height="99vh">
