--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:image" content="https://i.imgur.com/bs3c1vD.png" />
     <title>hurb</title>
 </head>
-<body>
+<body width="99vh" height="99vh">
     <iframe allow="autoplay 'src'" src="bruh.mp4" width="420px" height="1080px">
     
    
