--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>hurb</title>
 </head>
 <body width="99vh" height="99vh">
-    <iframe allow="autoplay 'src'" src="bruh.mp4" width="420px" height="1080px">
+    <iframe allow="fullscreen autoplay 'src'" src="bruh.mp4" width="420px" height="1080px">
     
    
     </iframe>
